--- a/server/proxy/modules/capture/CMakeLists.txt
+++ b/server/proxy/modules/capture/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(${PROJECT_NAME} MODULE
 	cap_protocol.h
 )
 
+target_link_libraries(${PROJECT_NAME} winpr)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 set_target_properties(${PROJECT_NAME} PROPERTIES NO_SONAME 1)
 
